fixed the issue with the nac bar elements spilling out of their container

--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -6,11 +6,10 @@ body {
   border-top: 1em solid #525252;
   background-color: #fff;
   width: 100%;
-  height: 6.25em;
-  margin: 0; }
+  margin: 0;
+  padding-bottom: 1.5em; }
   .navBar .menuContainer {
     width: 80%;
-    height: 6.25em;
     margin: 0 auto;
     font-size: 1.2em;
     font-weight: bold; }
@@ -77,7 +76,10 @@ body {
       float: right;
       color: #999999; }
     .jobRowContainer .jobRow h3 {
-      clear: both; }
+      clear: both;
+      color: #3D4637; }
+      .jobRowContainer .jobRow h3 .location {
+        font-weight: normal; }
     .jobRowContainer .jobRow p {
       color: #999999; }
     .jobRowContainer .jobRow .tag {
